docs: add documentation for show handler
